--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,7 @@
-<h1><%= @title %></h1>
+
+<% @title.each do |meetup| %>
+  <h1>
+    <a href="/meetups/<%= meetup.id %>"><%= meetup.name %>
+    </a>
+  </h1>
+<%end%>
