Syntax and layout modifications.

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,7 +11,8 @@
 
 <div class="top-bar">
   <div class="container">
-    <a class="logo" href="/">Meetups in Space</a>
+    <a class="logo" href="/">Meetups in Space  </a>
+    <a class="create" href="/new_meetup">| Create Your Meetup</a>
 
     <ul class="top-bar-section">
       <% if signed_in? %>
