Added a few things here. I added validations, I made the join button conditional to if the user had already joined the meetup. If so the button became a Leave button. I also printed the member_type in the show page for the user listed.

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -5,9 +5,9 @@
 <p>Start Time: <%= @selecting_meetup.start_time %></p>
 <p>End Time: <%= @selecting_meetup.end_time %></p>
 
-<form action='/join_meetup' method='post'>
-  <input type='hidden' name='id' value="<%=@selecting_meetup.id%>" />
-  <input type='submit' value='Join'/>
+<form action='/join_meetup/<%="#{@selecting_meetup.id}"%>' method='post'>
+  <input type='hidden' name="<%=@button%>" value="<%=@selecting_meetup.id%>" />
+  <input type='submit' value="<%=@button%>"/>
 </form>
 <br/>
 
@@ -15,7 +15,7 @@
 
 <ul>
   <%@users.each do |user|%>
-  <li><%=user.username%><br/><img src=<%="#{user.avatar_url}"%>></li>
+  <li><%=user.attendances.where(meetup_id: @selecting_meetup.id).first.member_type%><br/><img src=<%="#{user.avatar_url}"%>><br/><%=user.username%></li>
   <br/>
   <%end%>
 </ul>
