Added validations to models.   Added user name and avatar to show page.   Added conditionals to keep users from joining events more than once.

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -9,3 +9,14 @@
   <input type='hidden' name='id' value="<%=@selecting_meetup.id%>" />
   <input type='submit' value='Join'/>
 </form>
+<ul>
+
+<% @users.each do |user| %>
+  <li>
+    <%= user.username %>
+    <br>
+    <img src="<%= user.avatar_url %>" width="150" height="150">
+  </li>
+  <br>
+<%end%>
+</ul>
