--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -6,11 +6,17 @@
 <p>End Time: <%= @selecting_meetup.end_time %></p>
 
 <form action='/join_meetup' method='post'>
-  <input type='hidden' name='id' value="<%=@selecting_meetup.id%>" />
+  <input type='hidden' name='id' value="<%= @selecting_meetup.id %>" />
   <input type='submit' value='Join'/>
 </form>
-<ul>
 
+
+<form action='/unsubscribe' method="post">
+  <input type='hidden' name='id' value="<%= @selecting_meetup.id %>" />
+  <input type="submit" value="Unsubscribe" />
+</form>
+
+<ul>
 <% @users.each do |user| %>
   <li>
     <%= user.username %>
