--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -17,9 +17,11 @@
     <input type="submit" value="Unsubscribe" />
   </form>
   <br/>
+  <br/>
 </div>
 
 <div class="members-box">
+<h3>Members:</h3>
   <ul>
   <% @users.each do |user| %>
     <li>
@@ -37,18 +39,20 @@
   <ul>
   <%@comments.each do |comment|%>
     <li>
+      <img src="<%= comment.user.avatar_url %>" width="20" height="20">
       <%= comment.user.username %>
       <br>
       <div id="comment">
         <%= comment.content %>
       </div>
+      <br/>
     </li>
     <%end%>
   </ul>
 
   <form id='text-box' action="/new_comment/<%= "#{params[:id]}" %>" method="post">
-    <textarea name='comment' cols='50' rows='5' placeholder="Comment"></textarea>
-    <br>
+    <textarea name='comment' cols='50' rows='3' placeholder="Comment..."></textarea>
+
     <input type="submit" value="Comment">
   </form>
 </div>
